crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_settings_modal_save_not_committed.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│       ┌ Settings ────────────────────────────────────────────────────┐       │
│       │ Auto-lock:        [   ]                                      │       │
│       │   Timeout (s):    [ 300 ]                                    │       │
│       │                                                              │       │
│       │ Clipboard-clear:  [   ]                                      │       │
│       │   Timeout (s):    [ 20 ]                                     │       │
│       │                                                              │       │
│       │ save not committed (committed=false)                         │       │
│       │                                                              │       │
│       │                                                              │       │
│       │       Tab cycles fields  ·  Enter submit  ·  Esc cancel      │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
