crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_unlock_screen_with_wrong_passphrase_error.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 100
expression: "render_to_text(&state, 80, 12)"
---
┌ Paladin — unlock ────────────────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /var/lib/paladin/vault.bin                                           │
│                                                                              │
│  Passphrase:                                                                 │
│                                                                              │
│  decryption failed                                                           │
│                                                                              │
│  Press Enter to unlock; Esc or Ctrl-C to quit.                               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
